--- a/index.html
+++ b/index.html
@@ -26,80 +26,81 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <div class="container">
-    <header>
-      <div id="unplugged-logo">
-        <img src="img/unpluggedlogo.png" id="logo" alt="unplugged logo">
-        </div>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="">FAQ</a></li>
-          <li><a href="">About</a></li>
+          <li><a href="faqs/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <section id="header">
-        <h1>Retreat from the desk, return refreshed.</h1>
-      </section>
-      <section id="download">
-        <h2>Want to join the next retreat? </h2>
-        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        <h2>Find out more</h2>
-        <input type="text" id="email" name="email" value="name@email.com" class="input"><br>
-        <input type="submit" value="Download Itinerary" class="button">
-      </section>
-      <section id="work-week">
-        <h3>Have the work week you've always dreamed of &mdash; without the bad wifi.</h3>
+      <h1>Retreat from the desk, return refereshed.</h1>
+    </div>
+  </header>
 
-      <div id="campground" class="list-items">
-        <img src="img/campground.svg" alt="campground icon" class="icons"><br>
-        <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-      </div>
-      <div id="room" class="list-items">
-        <img src="img/bed.svg" alt="bed icon" class="icons"><br>
-        <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-      </div>
-      <div id="chef" class="list-items">
-        <img src="img/utensils.svg" alt="utensils icon" class="icons"><br>
-        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-      </div>
-      <div id="outdoors" class="list-items" >
-        <img src="img/shoe-prints.svg" alt="utensils icon" class="icons"><br>
-        <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-      </div>
-      <div id="reset" class="list-items">
-        <img src="img/smile.svg" alt="utensils icon" class="icons"><br>
-        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-      </div>
-      <div id="wifi" class="list-items">
-        <img src="img/wifi.svg" alt="utensils icon" class="icons"><br>
-        <p>Dedicated computer room for times that you must wifi.</p>
-      </div>
-    </section>
-    <section id="team">
-      <h3>Be a better team in 5 days, like these.</h3>
-      <div class="half-width">
-        <img src="img/omar-lopez-296944-unsplash.jpg" alt="team photo" id="team-photo">
-      </div>
-      <div class="half-width">
-        <h2>LaCrue Bottling Co. October 2017</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-      </div>
-    </section>
-    <footer>
-      <div id="contact" class="footer">
-        <h2>Contact</h2>
-        <p>555-555-5555<br>hello@unplugged.com</p>
-      </div>
-      <div id="social" class="footer">
-        <h2>Social</h2>
-        <a href=""><img src="img/facebook-f.svg" alt="facebook icon" class="social"></a>
-        <a href=""><img src="img/twitter.svg" alt="twitter icon" class="social"></a>
-        <a href=""><img src="img/instagram.svg" alt="instagram icon" class="social"></a>
-        <p>Copyright 2019 | Unplugged</p>
-    </footer>
-  </div>
+  <main>
+      <div class="content-wrapper">
+         <aside class="form">
+           <h3>Want to join the next retreat?</h3>
+           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+           <h3>Find out more</h3>
+           <div class="signup">
+            <input type="text" name="name" value="email address">
+            <input type="button" value="Download Itinerary">
+           </div>
+         </aside>
+          <section>
+            <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+            <img src="" alt="campground icon">
+            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            <img src="" alt="bed icon">
+            <p>12 private rooms ith ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+            <img src="" alt="utensils icon">
+            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+            <img src="" alt="footsteps icon">
+            <p>5 outdoor obstacle course including private beach &#189; mile from bungalow.</p>
+            <img src="" alt="smile icon">
+            <p>Retreat facilitator to manage your day to day activities so you call get a chance to rest.</p>
+            <img src="" alt="wifi icon">
+            <p>Dedicated computer room for times you must wifi.</p>
+          </section>
+
+          <aside>
+            <h2>Be a better team in 5 days, like these.</h2>
+            <img src="" alt="team photo">
+            <h3>LaCrue Bottling Co.<br>
+              October 2017</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+          </aside>
+        </div>
+  </main> <!-- main wrapper -->
+
+  <footer>
+     <div class="content-wrapper">
+         <div class="footer-content">
+           <address class="contact">
+             <h3>Contact</h3>
+             <p>555-555-5555</p>
+             <p>hello@unplugged.com</p>
+           </address>
+             <div class="social">
+                 <div class="social-icons">
+                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                     <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+                     <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+                     <!-- other social links here -->
+                 </div>
+             </div>
+         </div> <!-- footer content ends -->
+     </div> <!--footer content-wrapper ends-->
+
+     <div class="copyright">
+       <p>Copyright 2019 | Unplugged</p>
+     </div>
+  </footer>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
