--- a/index.html
+++ b/index.html
@@ -28,77 +28,109 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faqs/index.html" target="_blank">FAQ</a></li>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
-      <h1>Retreat from the desk, return refereshed.</h1>
     </div>
   </header>
 
   <main>
-      <div class="content-wrapper">
-         <aside class="form">
-           <h3>Want to join the next retreat?</h3>
-           <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-           <h3>Find out more</h3>
-           <div class="signup">
-            <input type="text" name="name" value="email address">
-            <input type="button" value="Download Itinerary">
-           </div>
-         </aside>
-          <section>
-            <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-            <img src="" alt="campground icon">
-            <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-            <img src="" alt="bed icon">
-            <p>12 private rooms ith ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-            <img src="" alt="utensils icon">
-            <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-            <img src="" alt="footsteps icon">
-            <p>5 outdoor obstacle course including private beach &#189; mile from bungalow.</p>
-            <img src="" alt="smile icon">
-            <p>Retreat facilitator to manage your day to day activities so you call get a chance to rest.</p>
-            <img src="" alt="wifi icon">
-            <p>Dedicated computer room for times you must wifi.</p>
-          </section>
 
-          <aside>
-            <h2>Be a better team in 5 days, like these.</h2>
-            <img src="" alt="team photo">
-            <h3>LaCrue Bottling Co.<br>
-              October 2017</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-          </aside>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
         </div>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div> <!-- aside content wrapper ends -->
+    </aside>
+    <section class="features">
+      <div class="content-wrapper">
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+        </article>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <h3>LaCrue Bottling Co. October 2017</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+      </div>
+    </section>
   </main> <!-- main wrapper -->
 
   <footer>
-     <div class="content-wrapper">
-         <div class="footer-content">
-           <address class="contact">
-             <h3>Contact</h3>
-             <p>555-555-5555</p>
-             <p>hello@unplugged.com</p>
-           </address>
-             <div class="social">
-                 <div class="social-icons">
-                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-                     <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-                     <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
-                     <!-- other social links here -->
-                 </div>
-             </div>
-         </div> <!-- footer content ends -->
-     </div> <!--footer content-wrapper ends-->
-
-     <div class="copyright">
-       <p>Copyright 2019 | Unplugged</p>
-     </div>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+          <p>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+            </p>
+          </div>
+        </div>
+      </div> <!-- footer content ends -->
+    </div>
+    <!--footer content-wrapper ends-->
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
