--- a/faqs/index.html
+++ b/faqs/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged - FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -47,7 +47,7 @@
         <div class="row-1">
           <h3>How do i get to the Unplugged retreat?</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-          <h3>What kind of team is righ tfor the Unplugged retreat?</h3>
+          <h3>What kind of team is right for the Unplugged retreat?</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
         </div>
         <div class="row-2">
