--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </aside>
     <section class="features">
       <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
         <article>
           <p class="fontawesome-icon"></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
