--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Retreat</title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -18,12 +14,12 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
 
   <!-- Add your site or application content here -->
   <header>
@@ -64,42 +60,74 @@
         </div>
       </div> <!-- aside content wrapper ends -->
     </aside>
+
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
-        </article>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-        </article>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-        </article>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-        </article>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-        </article>
-        <article>
-          <p class="fontawesome-icon"></p>
-          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-        </article>
+        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
+            </p>
+          </article>
+        </div>
       </div>
     </section>
+
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
-        <h3>LaCrue Bottling Co. October 2017</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <h2>Be a better team in 5 days, like this one.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur.
+            </p>
+          </div>
+        </article>
       </div>
     </section>
+
   </main> <!-- main wrapper -->
 
   <footer>
@@ -134,16 +162,28 @@
     </div>
   </footer>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script>
+    window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+
+  </script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    window.ga = function () {
+      ga.q.push(arguments)
+    };
+    ga.q = [];
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview')
+
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
