--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="" alt="unplugged logo">
+        <figure>
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
@@ -117,6 +119,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
         <article>
+            <figure>
+              <img src="img/omar-lopez-296944-unsplash.jpg" alt="team photo">
+            </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
