--- a/faqs/index.html
+++ b/faqs/index.html
@@ -26,10 +26,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <figure>
-          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
-        </figure>
+      <figure>
+        <a href="#">
+         <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
