--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
         <figure>
-          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+          <a href="#">
+           <img src="img/unpluggedlogo.png" alt="unplugged logo">
+          </a>
         </figure>
-      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -117,12 +117,12 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like this one.</h2>
+        <h2>Be a better team in 5 days, like these.</h2>
         <article>
             <figure>
               <img src="img/omar-lopez-296944-unsplash.jpg" alt="team photo">
             </figure>
-          <div>
+          <div class="reviews-text">
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
