--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
     <div class="content-wrapper">
       <figure>
         <a href="#">
-         <img src="img/unpluggedlogo.png" alt="unplugged logo">
+         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
       <div class="header-divider"></div>
@@ -63,6 +63,7 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18772.452527501635!2d-88.44147995461384!3d42.588696524827235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584e9f85c4509%3A0x9eb9a6efc12afe43!2sLake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1596813966782!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
     <section class="contact-section">
