--- a/faqs/index.html
+++ b/faqs/index.html
@@ -28,7 +28,7 @@
     <div class="content-wrapper">
       <figure>
         <a href="#">
-         <img src="img/unpluggedlogo.png" alt="unplugged logo">
+         <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
       </a>
