--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../css/main.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/b8b822bb54.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
